Improve spacing and fix various inconsistencies

--- a/src/scss/blocks/nova-blocks/_style.scss
+++ b/src/scss/blocks/nova-blocks/_style.scss
@@ -29,6 +29,14 @@
 
 .novablocks-media {
 
+    .content-is-basic {
+
+        .novablocks-block__content {
+            padding-left: calc(3 * var(--theme-spacing-fluid));
+            padding-right: calc(3 * var(--theme-spacing-fluid));
+        }
+    }
+
     &.novablocks-media--no-thumbnail {
 
         .novablocks-media__image {
@@ -43,22 +51,18 @@
     }
 }
 
-.novablocks-media__inner-container {
+.novablocks-hero__inner-container {
 
-    .wp-block-separator + * {
-        --element-spacing: var(--theme-spacing);
+    > .wp-block-separator:not(:first-child),
+    > .wp-block-separator[class] + * {
+        --novablocks-element-spacing-multiplier: 1;
     }
 }
 
-.novablocks-hero__inner-container {
+.novablocks-media__inner-container {
 
-    > :not(:first-child) {
-        --element-spacing: var(--theme-spacing);
-    }
-
-    > .wp-block-separator:not(:first-child),
-    > .wp-block-separator + * {
-        --element-spacing: var(--theme-spacing-medium);
+    .wp-block-separator {
+        width: 100%;
     }
 }
 
