--- a/style.css
+++ b/style.css
@@ -2388,12 +2388,9 @@ span.page-numbers {
 .entry-content > *,
 .wp-block-column > *,
 [class*="__inner-container"] > * {
-  --element-spacing: calc( var(--novablocks-spacing) * var(--novablocks-element-spacing-multiplier, 1) ); }
-  .wp-block:not(:first-child),
-  .entry-content > *:not(:first-child),
-  .wp-block-column > *:not(:first-child),
-  [class*="__inner-container"] > *:not(:first-child) {
-    margin-top: var(--element-spacing); }
+  --element-spacing: calc( var(--block-top-spacing, 1) * var(--novablocks-spacing) * var(--novablocks-element-spacing-multiplier, 1) );
+  margin-top: var(--element-spacing);
+  margin-bottom: calc( var(--block-bottom-spacing, 1) * var(--novablocks-spacing) * var(--novablocks-element-spacing-multiplier, 1)); }
 
 .novablocks-media + .novablocks-media[class],
 .novablocks-hero + .novablocks-media[class],
@@ -2973,5 +2970,5 @@ optgroup,
 select,
 textarea {
   font-family: var(--current-font-family);
-  text-transform: var(--current-tex-transform);
+  text-transform: var(--current-text-transform);
   font-weight: var(--current-font-weight); }
